# Rift

./: .gitignore  README.md  package-lock.json  package.json
apps/api/: .env.example  dev_server.py  pyproject.toml
apps/api/src/api_service/: __init__.py  main.py
apps/api/src/api_service/analytics/: __init__.py  errors.py  models.py  repository.py  schemas.py  service.py
apps/api/src/api_service/api/: __init__.py  router.py
apps/api/src/api_service/auth/: __init__.py  dependencies.py  schemas.py  security.py  service.py  tokens.py
apps/api/src/api_service/contextual_chat/: __init__.py  client.py  context_builder.py  contracts.py  errors.py  prompting.py  schemas.py  service.py
apps/api/src/api_service/core/: config.py
apps/api/src/api_service/ingestion/: client.py  errors.py  models.py  repository.py  schemas.py  service.py
apps/api/src/api_service/normalization/: __init__.py  errors.py  models.py  repository.py  schemas.py  service.py  transformers.py
apps/api/src/api_service/reports/: __init__.py  client.py  contracts.py  errors.py  input_builder.py  models.py  prompting.py  repository.py  schemas.py  service.py
apps/api/src/api_service/riot_profiles/: __init__.py  client.py  errors.py  models.py  parsing.py  repository.py  routing.py  schemas.py  service.py
apps/api/src/api_service/users/: __init__.py  models.py  repository.py
apps/api/tests/: run_contextual_chat_helper_tests.py  test_contextual_chat_service_helpers.py
apps/worker/: .env.example  pyproject.toml
apps/worker/src/worker_service/: __init__.py  cli.py
docs/: architecture.md  (+8 more)
(+52 files in other folders)
