[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "rift-api"
version = "0.1.0"
description = "FastAPI service for Rift."
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.115,<1.0",
  "itsdangerous>=2.2,<3.0",
  "openai>=1.0,<2.0",
  "uvicorn[standard]>=0.32,<1.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
